--- a/assets/SCSS/platforms/kick/_chatFooter.scss
+++ b/assets/SCSS/platforms/kick/_chatFooter.scss
@@ -4,6 +4,21 @@
 	}
 }
 
+#chat-input-wrapper {
+	transition: box-shadow 100ms ease-in, border 100ms ease-in, background-color 100ms ease-in;
+	box-shadow: inset 0 0 0 1px rgba(236, 234, 255, 0.32);
+	background: transparent;
+	outline: none;
+	border: none;
+
+	&:focus,
+	&:focus-within {
+		box-shadow: inset 0 0 0 2px rgba(236, 234, 255, 0.43);
+		background: transparent;
+		outline: none;
+	}
+}
+
 #message-input {
 	display: none;
 }
@@ -18,8 +33,7 @@
 	outline-color: transparent;
 
 	&:focus-visible {
-		outline: 2px solid transparent;
-		outline-offset: 2px;
+		outline: none;
 	}
 }
 
@@ -29,6 +43,11 @@
 	& ~ svg {
 		display: none;
 	}
+}
+
+// Select the bottom bar container under chat input
+.ntv__quick-emotes-holder ~ .lg\:gap-4 {
+	gap: 0.9rem;
 }
 
 .ntv__submit-button {
@@ -58,7 +77,7 @@
 
 .kick__chat-footer {
 	overflow: visible !important;
-	padding-top: 0.5em;
+	padding-top: 0.2em;
 
 	> div {
 		position: relative;
